# boxmuller

./: .gitignore  Box Mueller GRNG.ipynb  Box Muller GRNG.ipynb  Doxyfile  Makefile  README.md  boxmuller_ip.tcl
codegen/: output_remapper.m  output_remapper_tb.m
reference/: .gitignore  CMakeLists.txt  README.md
reference/lib/: CMakeLists.txt  fxpnt.c  fxpnt_piecewise_poly.c  xoroshiro128plus.c
reference/lib/include/: fxpnt.h  fxpnt_piecewise_poly.h
reference/main/: CMakeLists.txt  main.c  main.h
reference/test/: CMakeLists.txt  fxpnt_simple_arithmetic.c  test.c  test_fxpnt_simple_arithmetic.c  test_xoroshiro128plus.c
src/: .gitignore  bm_axis_gen.vhd  boxmueller.vhd  boxmuller.vhd  grng_16.vhd  lzd.vhd  output_remapper.vhd  output_remapper_fixpt.vhd  output_remapper_fixpt_pkg.vhd  pp_fcn.vhd  pp_fcn_rom_pkg.vhd  sb_des.vhd  shifter.vhd  testbench.vhd  top.vhd  xoroshiro128plus.vhd
verification/: CMakeLists.txt  README.md
verification/lib/: CMakeLists.txt  vcd.c
verification/lib/include/: vcd.h
verification/main/: CMakeLists.txt  validate_trace.c  verify_trace.c
vivado/: bm_clock.xdc  create_project.tcl
